implemented screen name for sign up
